      gnome-terminal (this kind of sucks)
    - in byobu.desktop, exec gnome-terminal with a --app-id hint, and
      drop the Terminal=true, as gnome-terminal will take care of that
    - install a dbus service, as new gnome-terminal expects to launch
      via dbus
    - fqdn namespace that service to us.kirkland.terminals.byobu
      + this is stupid, btw

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 14 Nov 2015 16:59:57 -0600

byobu (5.99-0ubuntu1) xenial; urgency=medium

  * usr/share/byobu/pixmaps/byobu.svg:
    - cleaned up vector image from Nobuto Murata
  * configure.ac, debian/install, debian/postinst, debian/postrm,
    etc/profile.d/Makefile.am, usr/share/byobu/profiles/Makefile.am,
    usr/share/byobu/profiles/Z97-byobu.sh.in => etc/profile.d/Z97-
    byobu.sh.in:
    - fix some recent regressions on byobu auto launching

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 14 Nov 2015 16:59:53 -0600

byobu (5.98-0ubuntu1) xenial; urgency=medium

  [ Dustin Kirkland ]
  * usr/bin/vigpg:
    - specify stdin for input file
  * usr/bin/vigpg:
    - get vigpg working with the new release of gpg in wily
    - clean up encrypted copies of the file
  * usr/share/applications/byobu.desktop: LP: #1503418
    - use byobu icon rather than gnome-terminal

  [ Roman Inflianskas ]
  * usr/lib/byobu/include/config.py.in:
    - fix help for openSUSE

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 28 Oct 2015 09:48:44 +0900

byobu (5.97-0ubuntu1) wily; urgency=medium

  * usr/bin/byobu-launcher.in: LP: #1338260
    - fix byobu autolaunch for TERM=screen-256color users

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 31 Aug 2015 13:32:36 -0500

byobu (5.96-0ubuntu1) wily; urgency=medium

  * configure.ac, debian/install, debian/postinst, debian/postrm,
    etc/profile.d/Makefile.am, etc/profile.d/Z97-byobu.sh.in =>
    usr/share/byobu/profiles/Z97-byobu.sh.in, usr/bin/byobu.in,
    usr/bin/byobu-launcher-install.in,
    usr/lib/byobu/include/config.py.in,